<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_active"
        android:icon="@drawable/baseline_access_time_24"
        android:title="@string/navigation_active" />

    <item
        android:id="@+id/navigation_completed"
        android:icon="@drawable/baseline_check_24"
        android:title="@string/navigation_completed" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/baseline_bookmark_24"
        android:title="@string/navigation_favorite"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/baseline_app_settings_alt_24"
        android:title="@string/navigation_setting"/>



</menu>