<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.DetailActivity">

        <Toolbar
            android:id="@+id/detail_appbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:navigationIcon="@drawable/ic_home_black_24dp"
            android:title="@string/placeholder_title"
            android:titleTextColor="@color/white"
            />





        <androidx.cardview.widget.CardView
            android:id="@+id/card_image_detail"
            app:layout_constraintTop_toBottomOf="@id/detail_appbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="250dp"
            android:maxHeight="300dp">

            <ImageView
                android:id="@+id/image_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/placeholder_description"
                android:src="@drawable/ic_home_black_24dp"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="-30dp"
            android:layout_width="40dp"
            app:layout_constraintTop_toBottomOf="@id/card_image_detail"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/favorite_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:src="@drawable/baseline_bookmark_24"
                android:contentDescription="@string/favorite_title"
                />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/card_image_detail"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/detail_title"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_title"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_marginTop="4dp"
                android:id="@+id/owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_owner"
                android:textAlignment="center"
                android:textSize="14sp"
                />

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_category"/>

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/placeholder_city"/>

                <TextView
                    android:id="@+id/participants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/available_quota"
                    />



            </LinearLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/summary"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_description"
                android:maxLines="3"
                android:ellipsize="end"
                android:justificationMode="inter_word"
                tools:targetApi="o" />


            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/detail_description"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_description"
                android:justificationMode="inter_word"
                tools:targetApi="o" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/date_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_date_range"
                />

            <TextView
                android:id="@+id/total_quota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_quota"/>

            <TextView
                android:id="@+id/total_registrant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_registrants"/>



                <Button
                    android:id="@+id/see_event_button"
                    android:layout_marginTop="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/see_events"/>





        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
