<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myfirstsubmission.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_active"
        android:name="com.example.myfirstsubmission.ui.active.ActiveFragment"
        android:label="@string/title_active"
        tools:layout="@layout/fragment_active" />

    <fragment
        android:id="@+id/navigation_completed"
        android:name="com.example.myfirstsubmission.ui.completed.CompletedFragment"
        android:label="@string/title_completed"
        tools:layout="@layout/fragment_completed" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.myfirstsubmission.ui.setting.SettingFragment"
        android:label="Setting"
        tools:layout="@layout/fragment_setting"/>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.myfirstsubmission.ui.favorite.FavoriteFragment"
        android:label="Favorite"
        tools:layout="@layout/fragment_favorite"/>
</navigation>